| Summary: | ASTERISK-29501: ARI - Stasis Playback doesn't hangup call when processing a list of invalid files | ||
| Reporter: | Andre Barbosa (barbix) | Labels: | |
| Date Opened: | 2021-06-29 11:06:59 | Date Closed: | 2021-07-20 11:01:44 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari_playbacks |
| Versions: | 18.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | We use long list of files to be played and sometimes it might happen where the external file server hosting the files is not available.
We also enforce a max call duration of X secs, using TIMEOUT(absolute). We found that while res_stasis_playback is trying to play all the files the schedule hangup is not applied, so we end up with calls with much more that 60secs. We submitted a patch where we verify `ast_check_hangup` before looping to the next sound file. If the call is already hangup we just break the cycle. It also ensures that the PlaybackFinished event is sent if the call was hangup. This is also use-full when we are playing a big list of file for a channel that is hangup. Before this patch Asterisk will give a warning for every sound not played and fire a PlaybackStart for every sound file on the list and that was tried to be played. With the patch we just break the playback cycle when the chan was hangup. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-06-29 11:07:00.731-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Andre Barbosa (barbix) 2021-06-29 11:18:14.885-0500 PR open: https://gerrit.asterisk.org/c/asterisk/+/16141 By: Friendly Automation (friendly-automation) 2021-07-20 11:01:46.309-0500 Change 16179 merged by Friendly Automation: res_stasis_playback: Check for chan hangup on play_on_channels [https://gerrit.asterisk.org/c/asterisk/+/16179|https://gerrit.asterisk.org/c/asterisk/+/16179] By: Friendly Automation (friendly-automation) 2021-07-20 13:18:19.525-0500 Change 16180 merged by George Joseph: res_stasis_playback: Check for chan hangup on play_on_channels [https://gerrit.asterisk.org/c/asterisk/+/16180|https://gerrit.asterisk.org/c/asterisk/+/16180] By: Friendly Automation (friendly-automation) 2021-07-20 13:18:42.811-0500 Change 16141 merged by George Joseph: res_stasis_playback: Check for chan hangup on play_on_channels [https://gerrit.asterisk.org/c/asterisk/+/16141|https://gerrit.asterisk.org/c/asterisk/+/16141] | ||